--- a/semanas.html
+++ b/semanas.html
@@ -525,7 +525,7 @@
     </main>
 
    <div class="btn-regresar-container">
-        <a href="principal.html" class="btn-regresar">
+        <a href="index.html" class="btn-regresar">
         <i class="ri-arrow-go-back-fill"></i> Regresar
         </a>
     </div>
@@ -579,5 +579,6 @@
     <script src="semanas.js"></script>
 
 </body>
+
 
 </html>
